--- a/packages/package.json
+++ b/packages/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "use-code-scanner",
+  "name": "packages",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "bunx --bun vite",
+    "dev": "vite",
     "build": "tsc && vite build",
     "lint:code": "biome lint ./",
     "lint:style": "biome format ./",
