--- a/docs/package.json
+++ b/docs/package.json
@@ -18,5 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.5.3"
   }
 }
