--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "use-code-scanner--root",
+  "name": "use-code-scanner",
   "version": "0.0.0",
   "private": true,
   "workspaces": [
-    "packages/*", 
-    "docs/*"
+    "docs/*",
+    "packages/*" 
   ]
 }
