fix/each devcontainer env file path

--- a/.devcontainer/docs/devcontainer.json
+++ b/.devcontainer/docs/devcontainer.json
@@ -6,7 +6,7 @@
   "runArgs": [
     "--privileged", 
     "--init", 
-    "--env-file", ".devcontainer/.env.dev",
+    "--env-file", ".devcontainer/docs/.env.dev",
     "--name", "${localWorkspaceFolderBasename}-docs"
   ],
   "mounts": [
