--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,11 +2,11 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "cwd": "${workspaceFolder}/docs",
-      "command": "./node_modules/.bin/astro dev",
       "name": "Astro Debug (Starlight)",
       "request": "launch",
-      "type": "node-terminal"
+      "type": "node-terminal",
+      "cwd": "${workspaceFolder}/docs",
+      "command": "./node_modules/.bin/astro dev"
     }
   ]
 }
