Add use-code-scanner to devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,5 @@
 {
+  "name": "use-code-scanner",
   "image": "mcr.microsoft.com/devcontainers/typescript-node:18-bullseye",
   "containerEnv": {
     "TZ": "Asia/Tokyo"
