--- a/packages/package.json
+++ b/packages/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@undecaf/zbar-wasm": "^0.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
