--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@undecaf/zbar-wasm": "^0.10.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zxing-wasm": "^1.2.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
